-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.5.0, Qt Creator 2.6.0-rc, Qt Creator 2.8.0-beta
-
None
The quick fix for auto creation of switch case does not work for anonymous enums.
If we define a variable whose type is an anonymous enum, the quickfix cannot be triggered. For exemple, it does not work in this code:
enum { A, B, C } toto; switch(toto) { }
The same thing happens if the enum is not anonymous, but the variable is defined in the same statement:
enum XXX { A2, B2, C2 } toto2;
| For Gerrit Dashboard: QTCREATORBUG-7487 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 302963,2 | CPlusPlus: Add missing type information for enum variables | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 302970,2 | CplusPlus: Fix type information for anonymous enums | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |